k8s/app/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      containers:
        - name: devops-demo
          image: elendumir/devops-demo:latest
          ports:
            - containerPort: 8000
