k8s/app/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: devops-demo-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
    - hosts:
        - devops-demo.local
      secretName: devops-demo-tls
        
  rules:
    - host: devops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo
                port:
                  number: 8000
